--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ jobs:
   release:
     name: release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # needed to write releases
+      packages: write # needed for ghcr access
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
@@ -16,6 +19,13 @@ jobs:
       - name: Tag name
         id: tag-name
         run: echo "tag=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -41,3 +51,14 @@ jobs:
           name: ${{ steps.tag-name.outputs.tag }}
           draft: true # So we can manually edit before publishing
           prerelease: ${{ contains(steps.tag-name.outputs.tag, '-') }} # v0.1.2-beta1, 1.2.3-rc1
+
+      - name: Build image and push to GitHub image registry
+        uses: docker/build-push-action@v6
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          tags: |
+            ghcr.io/k0sproject/k0sctl:latest
+            ghcr.io/k0sproject/k0sctl:${{ steps.tag-name.outputs.tag }}
+          push: true
