Add host.K0sInstallPath for changing k0s install location on target
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/smoke-test/k0sctl-single.yaml
+++ b/smoke-test/k0sctl-single.yaml
@@ -5,6 +5,7 @@ spec:
     - role: single
       uploadBinary: true
       os: "$OS_OVERRIDE"
+      k0sInstallPath: "$INSTALL_PATH"
       ssh:
         address: "127.0.0.1"
         port: 9022
