--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -50,7 +50,7 @@ smoke-reset: $(bootloose) id_rsa_k0s k0sctl
 	./smoke-reset.sh
 
 smoke-os-override: $(bootloose) id_rsa_k0s k0sctl
-	BOOTLOOSE_TEMPLATE=bootloose.yaml.osoverride.tpl K0SCTL_CONFIG=k0sctl-single.yaml OS_RELEASE_PATH=$(realpath os-release) OS_OVERRIDE="ubuntu" ./smoke-basic.sh
+	BOOTLOOSE_TEMPLATE=bootloose.yaml.osoverride.tpl K0SCTL_CONFIG=k0sctl-single.yaml OS_RELEASE_PATH=$(realpath os-release) OS_OVERRIDE="ubuntu" INSTALL_PATH="/usr/local/bin/custom-k0s" ./smoke-basic.sh
 
 smoke-downloadurl: $(bootloose) id_rsa_k0s k0sctl
 	BOOTLOOSE_TEMPLATE=bootloose.yaml.single.tpl K0SCTL_CONFIG=k0sctl-downloadurl.yaml ./smoke-basic.sh
